project('Wide-Open','cpp')
BlinnPhong=subproject('BlinnPhong')
libBlinnPhong_dep=BlinnPhong.get_variable('libBlinnPhong_dep')
Common=subproject('Common')
libCommon_dep=Common.get_variable('libCommon_dep')
BlinnPhongWithShadows=subproject('BlinnPhongWithShadows')
libBlinnPhongWithShadows_dep=BlinnPhongWithShadows.get_variable('libBlinnPhongWithShadows_dep')
Cubemap=subproject('Cubemap')
libCubemap_dep=Cubemap.get_variable('libCubemap_dep')
glfw=dependency('glfw3')
vulkan=dependency('vulkan')
executable('Wide-Open','src/main.cpp',dependencies:[libBlinnPhong_dep,libBlinnPhongWithShadows_dep,libCommon_dep,glfw,vulkan,libCubemap_dep])