project('BlinnPhongWithShadows','cpp')
inc=include_directories('include')
srcAssembler=run_command('srcAssembler.sh')
sources=srcAssembler.stdout().strip().split('\n')
libCommon=subproject('Common')
libCommon_dep=libCommon.get_variable('libCommon_dep')
vulkan = dependency('vulkan')
glfw=dependency('glfw3')
assimp=dependency('assimp')
libBlinnPhongWithShadows=library('BlinnPhongWithShadows',sources,include_directories:inc,dependencies:[libCommon_dep,vulkan,glfw,assimp],soversion:0)
libBlinnPhongWithShadows_dep=declare_dependency(include_directories:inc,link_with:libBlinnPhongWithShadows)